--- a/CROQUIS CATASTRAL SANTA MARIA JALTIANGUIS.html
+++ b/CROQUIS CATASTRAL SANTA MARIA JALTIANGUIS.html
@@ -189,6 +189,17 @@ window.addEventListener('load', () => {
         }
     }
 }, true);
+// Llenar filtro RADICA EL
+llenarSelect("filtroRadica", valoresUnicos("RADICA EL"), val => {
+    valorRadica = val;
+    aplicarFiltro();
+}, true);
+
+// Llenar filtro SERVICIOS
+llenarSelect("filtroServicios", valoresUnicos("SERVICIOS"), val => {
+    valorServicios = val;
+    aplicarFiltro();
+}, true);
 
     // Búsqueda rápida por nombre
     document.getElementById("busquedaNombre").addEventListener("input", function () {
